# noteblock-music-compression

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh.md  main.py  pyproject.toml
.github/workflows/: main.yaml
benches/: common.rs  siatec_benchmark.rs
compression_nbs/: cosiatec.py
nbs_compression/: lz77.py  utils.py
nbs_compression/sia_family/: __init__.py  cosiatec.py  point.py  recursia.py  sia.py  siatec.py  tec.py
nbs_files/: STAY.nbs  STAY_rebuild.nbs  test.mid  test.nbs  test_2.mid  test_2.nbs  test_2_rebuild.nbs  test_3.mid  test_3.nbs  test_3_rebuild.nbs  test_4.nbs  test_4_rebuild.nbs  test_5.nbs  test_5_rebuild.nbs  test_rebuild.nbs
nbslim/: utils.py
nbslim/sia_family/: __init__.py  _core.pyi  cosiatec.py  recursia.py  sia.py  siatec.py  sweepline.py  tec.py
src/: cosiatec.rs  lib.rs  recursia.rs  sia.rs  siatec.rs  sweepline.rs  tec.rs  wrapper.rs
test/: conftest.py  test_cosiatec.py  test_recursia.py  test_sia.py
