[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "logic-music-compression"
version = "0.2.1"
description = "music compression algorithms for compact Minecraft redstone music. "
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynbs>=1.1.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.maturin]
python-source = "."
module-name = "nbs_compression.sia_family._core"
