[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "nbslim"
version = "0.2.2"
description = "music compression algorithms for compact Minecraft redstone music. "
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynbs>=1.1.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.maturin]
python-source = "."
module-name = "nbslim.sia_family._core"
