[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "nbslim"
version = "1.0.0"
description = "music compression algorithms for compact Minecraft redstone music. "
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynbs>=1.1.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.maturin]
python-source = "."
module-name = "nbslim.sia_family._core"
include = ["./nbslim/**/*.pyi"]
